# gabe_versus_gavin

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  entrypoint.sh  example_poll.json  todo.md
.github/: buildpushimage.yml
.github/workflows/: buildpushimage.yml
frontend/: package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/assets/: configuration.js
frontend/src/pages/Admin/: Admin.vue  main.js
frontend/src/pages/Analytics/: Analytics.vue  main.js
frontend/src/pages/Home/: Home.vue  main.js
src/: main.rs  poll.rs  util.rs
