[package]
name = "gabe_versus_gavin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"]}
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
rand = "0.8.5"